--- a/Android/app/src/main/res/layout/market_item.xml
+++ b/Android/app/src/main/res/layout/market_item.xml
@@ -1,50 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:gravity="center_vertical">
+    android:orientation="vertical">
+
     <ImageButton
         android:id="@+id/btnDelete"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_margin="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/xml_menu_item_select"
-        android:src="@drawable/ic_delete"
-        android:scaleType="fitXY"/>
-    <com.oic.calcmarket.common.views.edittext.CTextView
-        android:id="@+id/tvIndex"
-        android:layout_width="0dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_delete" />
+
+    <LinearLayout
+        android:id="@+id/lyMarketItem"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorTransparent"
-        android:layout_weight="10"
-        android:textSize="12sp"
-        app:assets_font="@string/main_font"
-        android:text="1."/>
-    <com.oic.calcmarket.common.views.edittext.CEditText
-        android:id="@+id/tvTitle"
-        android:layout_width="0dp"
-        android:layout_weight="80"
-        android:maxLines="4"
-        android:singleLine="false"
-        android:textSize="12sp"
-        android:inputType="textNoSuggestions"
-        app:assets_font="@string/main_font"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/btnDelete"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <com.oic.calcmarket.common.views.edittext.CTextView
+            android:id="@+id/tvIndex"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:background="@color/colorTransparent"
+            android:maxLength="10"
+            android:text="1."
+            android:textSize="@dimen/text_size_medium"
+            app:assets_font="@string/main_font" />
+
+        <com.oic.calcmarket.common.views.edittext.CEditText
+            android:id="@+id/tvTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="80"
+            android:background="@color/colorTransparent"
+            android:inputType="textNoSuggestions"
+            android:maxLines="4"
+            android:singleLine="false"
+            android:text="Bot canh cham muoi"
+            android:textSize="@dimen/text_size_medium"
+            app:assets_font="@string/main_font" />
+
+        <com.oic.calcmarket.common.views.edittext.CEditText
+            android:id="@+id/tvCost"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="20"
+            android:background="@color/colorTransparent"
+            android:gravity="right"
+            android:inputType="numberDecimal|textNoSuggestions"
+            android:maxLength="10"
+            android:paddingRight="10dp"
+            android:singleLine="true"
+            android:selectAllOnFocus="true"
+            android:text="1.2"
+            android:textSize="@dimen/text_size_medium"
+            app:assets_font="@string/main_font" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lyButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorTransparent"
-        android:text="Bot canh cham muoi"/>
-    <com.oic.calcmarket.common.views.edittext.CEditText
-        android:id="@+id/tvCost"
-        android:layout_width="0dp"
-        android:layout_weight="20"
-        android:textSize="12sp"
-        android:gravity="right"
-        app:assets_font="@string/main_font"
-        android:layout_height="wrap_content"
-        android:text="1.2"
-        android:inputType="numberDecimal|textNoSuggestions"
-        android:background="@color/colorTransparent"
-        android:singleLine="true"/>
-</LinearLayout>
+        android:layout_below="@id/lyMarketItem"
+        android:layout_toRightOf="@id/btnDelete"
+        android:orientation="horizontal"
+        android:gravity="right">
+
+        <ImageButton
+            android:id="@+id/btnSub"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_subtract" />
+
+        <ImageButton
+            android:id="@+id/btnAdd"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_add" />
+
+        <com.oic.calcmarket.common.views.edittext.CTextView
+            android:id="@+id/tvQty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorTransparent"
+            android:drawableLeft="@drawable/ic_multiple"
+            android:drawablePadding="10dp"
+            android:gravity="right"
+            android:inputType="numberDecimal|textNoSuggestions"
+            android:maxLength="10"
+            android:paddingRight="10dp"
+            android:singleLine="true"
+            android:text="1"
+            android:textSize="@dimen/text_size_small"
+            app:assets_font="@string/second_font" />
+    </LinearLayout>
+</RelativeLayout>
