--- a/Android/app/src/main/res/layout/market_total.xml
+++ b/Android/app/src/main/res/layout/market_total.xml
@@ -15,6 +15,7 @@
         app:assets_font="@string/main_font"
         android:text="Total:"/>
     <com.oic.calcmarket.common.views.edittext.CTextView
+        android:id="@+id/tvTotal"
         android:layout_width="0dp"
         android:layout_weight="2"
         android:textSize="36sp"
