--- a/Android/app/src/main/res/values/dimens.xml
+++ b/Android/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <!-- Text sizes -->
     <dimen name="text_size_small">14.0sp</dimen>
     <dimen name="text_size_medium">16.0sp</dimen>
+    <dimen name="text_size_large">18.0sp</dimen>
 
     <!-- ActionBar color strip -->
     <dimen name="colorstrip">5dp</dimen>
