--- a/Android/app/src/main/res/layout/main_activity.xml
+++ b/Android/app/src/main/res/layout/main_activity.xml
@@ -20,7 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
-        android:visibility="gone"
         android:layout_below="@id/toolbar">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -29,7 +28,8 @@
             android:paddingRight="16dp"
             android:paddingBottom="16dp">
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -144,48 +144,9 @@
         android:layout_height="200dp"
         android:layout_below="@id/toolbar"
         android:alpha="0"
+        android:visibility="gone"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:background="#2222"/>
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:background="#FF0"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_below="@id/toolbar">-->
-        <!--<LinearLayout-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_height="match_parent"/>-->
-        <!--<LinearLayout-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:background="#F00"-->
-            <!--android:layout_height="match_parent"/>-->
-    <!--</LinearLayout>-->
-    <!--<com.oic.calcmarket.common.views.custom.TriangleView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_marginTop="300dp"-->
-        <!--android:layout_below="@id/toolbar"-->
-        <!--android:orientation="vertical"-->
-        <!--android:gravity="center">-->
-        <!--<Button-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="hello worl"-->
-            <!--android:background="#FFF"/>-->
-        <!--<Button-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" -->
-            <!--android:text="hello worl"-->
-            <!--android:background="#FFF"/>-->
-        <!--<ImageView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:src="@drawable/ic_menu_bg"-->
-            <!--android:scaleType="fitXY"/>-->
-    <!--</com.oic.calcmarket.common.views.custom.TriangleView>-->
 </RelativeLayout>
