--- a/Android/app/src/main/res/layout/bill_item.xml
+++ b/Android/app/src/main/res/layout/bill_item.xml
@@ -9,7 +9,6 @@
         android:id="@+id/btnDelete"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:background="@drawable/xml_menu_item_select"
         android:scaleType="fitXY"
@@ -24,7 +23,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <com.oic.calcmarket.common.views.edittext.CTextView
+        <com.oic.calcmarket.common.widgets.edittext.CTextView
             android:id="@+id/tvIndex"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -32,10 +31,9 @@
             android:background="@color/colorTransparent"
             android:maxLength="10"
             android:text="1."
-            android:textSize="@dimen/text_size_medium"
-            app:assets_font="@string/main_font" />
+            android:textSize="@dimen/text_size_medium" />
 
-        <com.oic.calcmarket.common.views.edittext.CEditText
+        <com.oic.calcmarket.common.widgets.edittext.CEditText
             android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -45,10 +43,9 @@
             android:maxLines="4"
             android:singleLine="false"
             android:text="Bot canh cham muoi"
-            android:textSize="@dimen/text_size_medium"
-            app:assets_font="@string/main_font" />
+            android:textSize="@dimen/text_size_medium" />
 
-        <com.oic.calcmarket.common.views.edittext.CEditText
+        <com.oic.calcmarket.common.widgets.edittext.CEditText
             android:id="@+id/tvCost"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -61,8 +58,7 @@
             android:singleLine="true"
             android:selectAllOnFocus="true"
             android:text="1.2"
-            android:textSize="@dimen/text_size_medium"
-            app:assets_font="@string/main_font" />
+            android:textSize="@dimen/text_size_medium" />
     </LinearLayout>
 
     <LinearLayout
@@ -91,7 +87,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_add" />
 
-        <com.oic.calcmarket.common.views.edittext.CTextView
+        <com.oic.calcmarket.common.widgets.edittext.CTextView
             android:id="@+id/tvQty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -104,7 +100,6 @@
             android:paddingRight="10dp"
             android:singleLine="true"
             android:text="1"
-            android:textSize="@dimen/text_size_small"
-            app:assets_font="@string/second_font" />
+            android:textSize="@dimen/text_size_small" />
     </LinearLayout>
 </RelativeLayout>
