--- a/Android/app/src/main/res/layout/bill_total.xml
+++ b/Android/app/src/main/res/layout/bill_total.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp">
+    android:orientation="horizontal"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
+
     <com.oic.calcmarket.common.widgets.edittext.CTextView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorTransparent"
-        android:layout_weight="1"
-        android:textSize="28sp"
-        android:text="Total:"/>
+        android:text="Total:"
+        android:singleLine="true"
+        android:textSize="28sp"/>
+
     <com.oic.calcmarket.common.widgets.edittext.CTextView
         android:id="@+id/tvTotal"
-        android:layout_width="0dp"
-        android:layout_weight="2"
-        android:textSize="36sp"
-        android:gravity="right"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1.2"
         android:background="@color/colorTransparent"
-        android:singleLine="true"/>
+        android:gravity="right"
+        android:singleLine="true"
+        android:text="1.2"
+        android:textSize="36sp"/>
 </LinearLayout>
