--- a/Android/app/src/main/res/layout/main_activity.xml
+++ b/Android/app/src/main/res/layout/main_activity.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFF"
-    tools:context="com.oic.calcmarket.MainActivity">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFF"
+                tools:context=".screens.bill.BillActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -13,140 +13,56 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ThemeToolbar"
-        android:layout_marginBottom="16dp"/>
+        app:theme="@style/ThemeToolbar"/>
 
-    <ScrollView
+    <RelativeLayout
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"
-        android:layout_below="@id/toolbar">
-        <RelativeLayout
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp">
+            android:layout_gravity="center"
+            android:padding="16dp"
+            card_view:cardCornerRadius="0dp">
 
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/main_bg"
+                android:minHeight="500dp"
                 android:layout_gravity="center"
-                card_view:cardCornerRadius="0dp"
-                android:padding="0dp">
+                android:foregroundGravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-                <LinearLayout
-                    android:background="@color/main_bg"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/layoutProducts"
                     android:layout_width="match_parent"
-                    android:minHeight="500dp"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:orientation="vertical"
-                    android:layout_height="match_parent">
+                    android:layout_weight="1"
+                    android:layout_height="0dp">
 
-                    <com.oic.calcmarket.common.views.edittext.CTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="supermarket"
-                        android:textAllCaps="true"
-                        app:assets_font="@string/main_font"
-                        android:textSize="30sp"
-                        android:textStyle="bold"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_horizontal"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="15dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginRight="40dp"
-                        android:background="@drawable/xml_bill_separate"
-                        android:layerType="software"/>
-
-                    <LinearLayout
-                        android:id="@+id/layoutProducts"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <com.oic.calcmarket.common.views.market.BillLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="15dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/xml_bill_separate"
-                        android:layerType="software"/>
-
-                    <include layout="@layout/market_total"
-                        android:layout_width="match_parent"
-                        android:layout_marginLeft="30dp"
-                        android:layout_height="wrap_content"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="15dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/xml_bill_separate"
-                        android:layerType="software"/>
-
-                    <com.oic.calcmarket.common.views.edittext.CTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Mon 2016-01-11"
-                        app:assets_font="@string/main_font"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_horizontal"/>
-                </LinearLayout>
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
 
 
-            </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
-        </RelativeLayout>
-    </ScrollView>
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/scanLayout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/toolbar"
-        android:alpha="0"
-        android:visibility="gone"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#2222"/>
+        android:alpha="0"
+        android:background="#2222"
+        android:visibility="gone"/>
 </RelativeLayout>
