--- a/Android/app/src/main/res/layout/main_activity.xml
+++ b/Android/app/src/main/res/layout/main_activity.xml
@@ -37,13 +37,13 @@
                 android:minHeight="500dp"
                 android:layout_gravity="center"
                 android:foregroundGravity="center"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:orientation="vertical">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/layoutProducts"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
+                    android:padding="16dp"
                     android:layout_height="0dp">
 
                 </android.support.v7.widget.RecyclerView>
